<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/functionPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".CalcaulatorActivity">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20"
        android:background="@color/black">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="60sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20" >

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/buttonClear"
            android:textSize="25sp"
            android:background="@drawable/dark_grey_button"
            android:onClick="onActionClick" />

        <Button
            android:id="@+id/buttonToggleSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/buttonToggleSign"
            android:textSize="25sp"
            android:background="@drawable/dark_grey_button"
            android:onClick="onActionClick" />

        <Button
            android:id="@+id/buttonPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/buttonPercent"
            android:textSize="25sp"
            android:background="@drawable/dark_grey_button"
            android:onClick="onActionClick" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/buttonDivide"
            android:textSize="25sp"
            android:background="@drawable/orange_button_unclicked"
            android:onClick="onActionClick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20" >

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button7"
            android:textSize="25sp"
            android:background="@drawable/light_grey_button"
            android:onClick="onNumClick" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button8"
            android:textSize="25sp"
            android:background="@drawable/light_grey_button"
            android:onClick="onNumClick" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button9"
            android:textSize="25sp"
            android:background="@drawable/light_grey_button"
            android:onClick="onNumClick" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/buttonMultiply"
            android:textSize="25sp"
            android:background="@drawable/orange_button"
            android:onClick="onActionClick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20" >

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button4"
            android:textSize="25sp"
            android:background="@drawable/light_grey_button"
            android:onClick="onNumClick" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button5"
            android:textSize="25sp"
            android:background="@drawable/light_grey_button"
            android:onClick="onNumClick" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/button6"
            android:textSize="25sp"
            android:background="@drawable/light_grey_button"
            android:onClick="onNumClick" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/buttonSubtract"
            android:textSize="25sp"
            android:background="@drawable/orange_button"
            android:onClick="onActionClick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".40"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50"
                android:textSize="25sp" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button1"
                    android:textSize="25sp"
                    android:background="@drawable/light_grey_button"
                    android:onClick="onNumClick" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button2"
                    android:textSize="25sp"
                    android:background="@drawable/light_grey_button"
                    android:onClick="onNumClick" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button3"
                    android:textSize="25sp"
                    android:background="@drawable/light_grey_button"
                    android:onClick="onNumClick" />

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/buttonAdd"
                    android:textSize="25sp"
                    android:background="@drawable/orange_button"
                    android:onClick="onActionClick" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50" >

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:text="@string/button0"
                    android:textSize="25sp"
                    android:background="@drawable/light_grey_button"
                    android:onClick="onNumClick" />

                <Button
                    android:id="@+id/buttonDecimalPoint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/buttonDecimalPoint"
                    android:textSize="25sp"
                    android:background="@drawable/light_grey_button"
                    android:onClick="onActionClick" />

                <Button
                    android:id="@+id/buttonEquals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/buttonEquals"
                    android:textSize="25sp"
                    android:background="@drawable/orange_button"
                    android:onClick="onActionClick" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>